2012-09-09  Paul Smith  <psmith@gnu.org>

	* read.c (record_files): Reset the default macro values if .POSIX
	is set.  Fixes Savannah bug #37069.
	(parse_file_seq): Break out of an infinite loop if we're not
	making progress when parsing archive references.

2012-09-01  Eli Zaretskii  <eliz@gnu.org>

	* README.W32.template: Update for job-server and Guile support.

	* read.c (unescape_char): Advance 'p' after copying the unescaped
	characters.  Otherwise the backslashes are incorrectly erased from
	the original string.

2012-03-05  Paul Smith  <psmith@gnu.org>

	Update copyright notices to use year ranges, as allowed by
	clarifications in the GNU Maintainer's Manual.

2012-03-04  Paul Smith  <psmith@gnu.org>

	* read.c (unescape_char): New function to remove escapes from a char.
	(record_files): Call it on the dependency string to unescape ":".
	Fixes Savannah bug #12126 and bug #16545.

	* make.h (CSTRLEN): Determine the length of a constant string.
	* main.c: Use the new macro.
	* read.c: Ditto.
	* variable.h: Ditto.
	* function.c: Simplify checks for function alternatives.

	* expand.c (variable_append): If the current set is local and the
	next one is not a parent, then treat the next set as
	local as well.  Fixes Savannah bug #35468.

2012-03-03  Paul Smith  <psmith@gnu.org>

	* acinclude.m4 (AC_STRUCT_ST_MTIM_NSEC): Add support for AIX 5.2+
	nanosecond timestamps.  Fixes Savannah bug #32485.

	Convert uses of `foo' for quoting to 'foo' to reflect changes in
	the GNU Coding Standards.  Fixes Savannah bug #34530.

	* job.c (construct_command_argv_internal): In oneshell we need to
	break the SHELLFLAGS up for argv.  Fixes Savannah bug #35397.

	* function.c (func_filter_filterout): Recompute the length of each
	filter word in case it was compressed due to escape chars.  Don't
	reset the string as it's freed.  Fixes Savannah bug #35410.

	* misc.c (collapse_continuations): Only use POSIX-style
	backslash/newline handling if the .POSIX target is set.