@@ -1,5 +1,8 @@
 2012-09-09  Paul Smith  <psmith@gnu.org>
 
+	* default.c (default_variables): Use a correct default LIBPPATERNS
+	for MacOS.  Fixes Savannah bug #37197.
+
 	* read.c (record_files): Reset the default macro values if .POSIX
 	is set.  Fixes Savannah bug #37069.
 	(parse_file_seq): Break out of an infinite loop if we're not
